k8s/03-dts/05-spanish.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spanish
  namespace: dts-poc
  labels:
    app: dts-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spanish
  template:
    metadata:
      labels:
        app: spanish
    spec:
      containers:
        - name: spanish
          image: dts/spanish
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  namespace: dts-poc
  name: spanish
  labels:
    app: dts-app
spec:
  type: ClusterIP
  selector:
    app: spanish
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
