k8s/03-dts/01-dts-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dts-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dts
spec:
  hosts:
    - "*"
  gateways:
    - dts-gateway
  http:
    - match:
        - uri:
            exact: /english
      route:
        - destination:
            host: english
            port:
              number: 8091
